staticfiels dir created, static root defined in settings.py, footer urls bug fixed

--- a/user/templates/user/theme.html
+++ b/user/templates/user/theme.html
@@ -266,6 +266,7 @@
 
     $('#read_more').click(function(){
         $('#hidden_text').show();
+        $('#read_more').hide();
     })
 
     $('#search_bar').on('keyup', function() {
